--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
 *{
     padding: 0;
     margin: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Audiowide', serif;
     box-sizing: border-box;
 }
 html{
@@ -12,7 +12,7 @@ body{
     width: 100%;
     height: 100vh;
     overflow: hidden;
-    background: linear-gradient(to right, rgb(255,255,255), rgb(254,215,173));
+    background: linear-gradient(to right, rgb(149,185,140), rgb(254,215,173));
 }
 nav{
     width: 100%;
@@ -32,8 +32,8 @@ nav{
     font-weight: bolder;
 }
 .logo span{
-    color: rgb(109,67, 0);
-    text-shadow: 0 0 10px rgb(109,67, 0);
+    color: rgb(122,129,133);
+    text-shadow: 0 0 10px rgb(122,129,133);
 }
 .hamburg, .cancel{
     cursor: pointer;
@@ -64,7 +64,7 @@ nav{
     left: 0;
     width: 0%;
     height: 3px;
-    background-color: rgb(109,67, 0);
+    background-color: rgb(149,185,140);
     transition: 0.2s linear;
 }
 .nav-container .links a:hover::before{
@@ -74,7 +74,7 @@ nav{
     background-color: transparent;
     padding: 5px 20px;
     border-radius: 20px;
-    border: 2px solid rgb(109,67, 0);
+    border: 2px solid rgb(149,185,140);
     transition: 0.2s linear;
 }
 .nav-container .contact-btn a{
@@ -82,11 +82,11 @@ nav{
     transition: 0.3s linear;
 }
 .nav-container .contact-btn:hover, .nav-container .contact-btn:hover a{
-    background-color: rgb(109,67, 0);
+    background-color: rgb(149,185,140);
     color: white;
 }
 .nav-container .links a:hover{
-    color: rgb(109,67, 0);
+    color: rgb(149,185,140);
 }
 .dropdown{
     z-index: 100;
@@ -109,7 +109,7 @@ nav{
     transition: 0.2s linear;
 }
 .dropdown .links a:hover{
-    background-color: rgb(109,67, 0);
+    background-color: rgb(149,185,140);
 }
 section{
     width: 100%;
@@ -139,16 +139,16 @@ section{
 }
 .content h1 span{
     color: rgb(109,67, 0);
-    text-shadow: 0 0 10px rgb(109,67, 0);
+    text-shadow: 0 0 10px rgb(149,185,140);
 }
 .content .typewriter{
     font-weight: 600;
     font-size: clamp(1rem, 1rem + 5vw, 2rem);
 }
 .content .typewriter span{
-    color: rgb(109,67, 0);
+    color: rgb(149,185,140);
     font-size: 2.5rem;
-    text-shadow: 0 0 5px rgb(109,67, 0);
+    text-shadow: 0 0 5px rgb(149,185,140);
     position: relative;
     transition: 0.3s linear;
 }
@@ -171,13 +171,13 @@ section{
 }
 @keyframes words {
     0%, 33%{
-        content: "Developer";
+        content: "usunto";
     }
     34%, 66%{
-        content: "Designer";
+        content: "usunto";
     }
     67%, 100%{
-        content: "Youtuber";
+        content: "usunto";
     }
 }
 .content p{
@@ -201,14 +201,14 @@ section{
 .social-links i:hover{
     scale: 1.3;
     color: white;
-    background-color: rgb(109,67, 0);
-    filter: drop-shadow(0 0 10px rgb(109,67,0));
+    background-color: rgb(149,185,140);
+    filter: drop-shadow(0 0 10px rgb(149,185,140));
 }
 .content button{
     width: 40%;
     height: 6vh;
     margin: 30px;
-    background-color: rgb(109,67, 0);
+    background-color: rgb(149,185,140);
     color: white;
     border: none;
     outline: none;
@@ -219,11 +219,11 @@ section{
 }
 .content button:hover{
  scale: 1.1;
- color: rgb(109,67, 0);
- border: 2px solid rgb(109,67, 0);
+ color: rgb(149,185,140);
+ border: 2px solid rgb(149,185,140);
  background-color: transparent;
  font-weight: 700;
- box-shadow: 0 0 40px rgb(109,67, 0);
+ box-shadow: 0 0 40px rgb(149,185,140);
 }
 @media (max-width:884px) {
     body{
